# github-monitor

./: .gitignore  Cargo.toml  README.md  example_config.yml
src/: args.rs  config.rs  main.rs  prometheus.rs
